Eu e Lucas Terminamos tudo

--- a/crunch/filmeModelo.html
+++ b/crunch/filmeModelo.html
@@ -1,135 +1,239 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="css/filmeModelo.css">
-  <link rel="stylesheet" href="css/padrao.css">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
-  <title>Filme Modelo</title>
-</head>
-<header>
-  <nav class="navbar">
-    <div class="divLarger">
-      <a class="home" href="home.html"><img class="Crun" src="imgs/Crunchyroll.svg.png" alt="Crunchyroll"></a>
-      <a class="tdsS" href="todasasseries.html">Animes</a>
-      <a class="tdsF" href="todosFilmes.html">Filmes</a>
-      <div class="iconzinhos">
-        <img src="imgs/" alt="">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css/filmeModelo.css" />
+    <link rel="stylesheet" href="css/padrao.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lato&display=swap"
+      rel="stylesheet"
+    />
+    <title>Filme Modelo</title>
+  </head>
+  <header>
+    <nav class="navbar">
+      <div class="divLarger">
+        <a class="home" href="home.html"><img class="Crun" src="imgs/Crunchyroll.svg.png" alt="Crunchyroll"></a>
+        <a class="tdsS" href="todasasseries.html">Animes</a>
+        <a class="tdsF" href="todosFilmes.html">Filmes</a>
+        <div class="iconzinhos user">
+          <div class="caixinha">
+            <img class="lupa" src="imgs/filme e serie modelo/lupa branca.png" alt="lupa">
+            <img class="salvaB" src="imgs/filme e serie modelo/salvar branco.png" alt="salvo">
+            <img class="iconuser" src="imgs/filme e serie modelo/nobara iconn.png" alt="user">
+            <span class="setinha">▾</span>
+          </div>
+        </div>
       </div>
-      <div class="user">
-        <img class="iconuser" src="imgs/filme e serie modelo/nobara iconn.png" alt="user">
-        <span class="setinha">▾</span>
-      </div>
-    </div>
-  </nav>
-</header>
+    </nav>
+  </header>
 
-<body>
-
-  <div class="geral">
-    <section class="modelo">
-      <img class="modeloLeft" src="imgs/filme e serie modelo/dragon ball filme modelo.jpe" alt="DBS">
-      <div class="modeloRight">
-        <img class="salvar" src="imgs/salvar branco.png" alt="salvar">
-        <h2>Dragon Ball (Filmes) <span class="barra">|</span> <span class="num">4.7 ★ (8.3K)▾</span></h2>
-        <h1 id="titulo">Dragon Ball Super: Super Herói</h1>
-        <p><img class="idade" src="imgs/filme e serie modelo/idade12.png" alt="Indicado para maiores de 12 anos"><span class="p">◆</span> <span class="ling">Dub | Leg</span></p>
-        <p class="lançou">Lançado em 12 jul 2023 </p>
-        <p><img class="like" src="imgs/filme e serie modelo/likee branco.png" alt="like"> <span class="li">5.2K</span> <img class="dislike" src="imgs/filme e serie modelo/dislike branco.png" alt=""> <span class="li1">73</span> <img class="comp" src="imgs/filme e serie modelo/compartilhar branco.png" alt="compartilhar"></p>
-        <p>O exército Red Ribbon havia sido destruído por Son Goku... Mas certos indivíduos decidiram levar adiante sua missão e criaram os androides supremos: Gamma 1 e Gamma 2. Estes dois androides - que se intitulam "super-heróis" - decidem atacar Piccolo e Gohan! Qual será o objetivo do Novo Exército Red Ribbon? Quando o perigo é iminente, é então que desperta o Super-Herói!</p>
-        <input type="checkbox" id="item-1">
-        <div class="checkbox">
-          <label for="item-1"><strong class="mos">Mostrar Mais</strong></label>
-          <p><strong>Áudio</strong>
-            <span class="audio">Japonês, Português (Brasil), English, <br>Català, Deutsch, Español (América Latina),<br> Español (España),Français, Italiano, Polski, <br>Português (Portugal), हिंदी, 中文 (國語), ไทย</span>
+  <body>
+    <img class="conteudo" src="imgs/filmes/DragonBall_play.jpg" alt="player">
+  <img class="play" src="imgs/filme e serie modelo/player.png" alt="player2">
+    <div class="geral">
+      <section class="modelo">
+        <img
+          class="modeloLeft"
+          src="imgs/filme e serie modelo/dragon ball filme modelo.jpe"
+          alt="DBS"
+        />
+        <div class="modeloRight">
+          <img class="salvar" src="imgs/salvar branco.png" alt="salvar" />
+          <h2>
+            Dragon Ball (Filmes) <span class="barra">|</span>
+            <span class="num">4.7 ★ (8.3K)▾</span>
+          </h2>
+          <h1 id="titulo">Dragon Ball Super: Super Herói</h1>
+          <p>
+            <img
+              class="idade"
+              src="imgs/filme e serie modelo/idade12.png"
+              alt="Indicado para maiores de 12 anos"
+            /><span class="p">◆</span> <span class="ling">Dub | Leg</span>
           </p>
-          <hr>
-          <p><strong>Legendas</strong> <span class="pt">
-              Português (Brasil)</span></p>
-          <hr>
-          <p><strong>Classificação de Conteúdo</strong><span class="id">A12</span> <span class="idd">
-              Violência, Nudez, Drogas</span></p>
+          <p class="lançou">Lançado em 12 jul 2023</p>
+          <p>
+            <img
+              class="like"
+              src="imgs/filme e serie modelo/likee branco.png"
+              alt="like"
+            />
+            <span class="li">5.2K</span>
+            <img
+              class="dislike"
+              src="imgs/filme e serie modelo/dislike branco.png"
+              alt=""
+            />
+            <span class="li1">73</span>
+            <img
+              class="comp"
+              src="imgs/filme e serie modelo/compartilhar branco.png"
+              alt="compartilhar"
+            />
+          </p>
+          <p>
+            O exército Red Ribbon havia sido destruído por Son Goku... Mas
+            certos indivíduos decidiram levar adiante sua missão e criaram os
+            androides supremos: Gamma 1 e Gamma 2. Estes dois androides - que se
+            intitulam "super-heróis" - decidem atacar Piccolo e Gohan! Qual será
+            o objetivo do Novo Exército Red Ribbon? Quando o perigo é iminente,
+            é então que desperta o Super-Herói!
+          </p>
+          <input type="checkbox" id="item-1" />
+          <div class="checkbox">
+            <label for="item-1"
+              ><strong class="mos">Mostrar Mais</strong></label
+            >
+            <p class="pp">
+              <strong>Áudio</strong>
+              <span class="audio"
+                >Japonês, Português (Brasil), English, <br />Català, Deutsch,
+                Español (América Latina),<br />
+                Español (España),Français, Italiano, Polski, <br />Português
+                (Portugal), हिंदी, 中文 (國語), ไทย</span
+              >
+            </p>
+            <hr />
+            <p class="pp">
+              <strong>Legendas</strong>
+              <span class="pt"> Português (Brasil)</span>
+            </p>
+            <hr />
+            <p class="pp">
+              <strong>Classificação de Conteúdo</strong
+              ><span class="id">A12</span>
+              <span class="idd"> Violência, Nudez, Drogas</span>
+            </p>
+          </div>
         </div>
-      </div>
-    </section>
-
-    <div class="mdcom">
-      <section class="comentarios">
-        <img class="icoon" src="imgs/filme e serie modelo/nobara iconn.png" alt="icon">
-        <p><strong class="i">598 Comentários</strong><img class="mais" src="imgs/Mais opcções.png" alt="mais opçoes"> <span class="m"><strong>Mais Populares</strong></span></p>
-        <p class="subTitulo"> Comentar como <img class="coroa" src="imgs/filme e serie modelo/coroaa.png" alt="coroa"><span class="coment">ArthurUzumaki</span></p>
-        <textarea class="txtArea lato-regular" cols="80" rows="2" placeholder="Deixar um Comentário "></textarea>
-        <img class="comentar" src="imgs/filme e serie modelo/comentar.png" alt="comentar">
       </section>
-      <p><img class="icon1" src="imgs/filme e serie modelo/eren iconn.png" alt=""><strong class="c">JoãoUchiha</strong> <span class="t"> há 8 meses</span></p>
-      <p class="com1">Dragon ball é o pai dos animes, têm que respeitar.❤️‍🔥</p>
-      <img class="coments" src="imgs/filme e serie modelo/comentarios-.png" alt="coments">
-      <div class="gojo">
-        <p class="ex"><strong>EXIBIR 26 RESPOSTAS▾</strong></p>
-        <p><img class="icon1" src="imgs/filme e serie modelo/gojo iconn.png" alt=""><strong class="c">SatoroGozo</strong> <span class="t"> há 8 meses</span></p>
-        <p class="com2">Curto esse filme, a história é meio bobinha até pro padrão do super, mas ao menos tem umas lutas legais. <br> Na época que anunciaram que seria em 3d eu fiquei com pé atrás, é uma escolha questionável <br>pra um filme,no fim o 3d desse filme é ótimo, não me importaria em ver mais dragon ball nesse estilo.</p>
-        <img class="coments1" src="imgs/filme e serie modelo/comentarios-.png" alt="coments">
-        <p class="ex1"><strong>EXIBIR 10 RESPOSTAS▾</strong></p>
+
+      <div class="mdcom boxImg">
+        <section class="comentarios">
+          <img
+            class="icoon"
+            src="imgs/filme e serie modelo/nobara iconn.png"
+            alt="icon"
+          />
+          <div class="boxImg">
+            <strong class="i">598 Comentários</strong
+            ><img class="mais" src="imgs/Mais opcções.png" alt="mais opçoes" />
+            <span class="m"><strong>Mais Populares</strong></span>
+            </div>
+          <p class="subTitulo boxImg">
+            Comentar como
+            <img
+              class="coroa"
+              src="imgs/filme e serie modelo/coroaa.png"
+              alt="coroa"
+            /><span class="coment">ArthurUzumaki</span>
+          </p>
+          <textarea
+            class="txtArea lato-regular"
+            cols="80"
+            rows="2"
+            placeholder="Deixar um Comentário "
+          ></textarea>
+          <img
+            class="comentar"
+            src="imgs/filme e serie modelo/comentar.png"
+            alt="comentar"
+          />
+        </section>
+        <div class="boxImg">
+          <img
+            class="icon1"
+            src="imgs/filme e serie modelo/eren iconn.png"
+            alt=""
+          /><strong class="c">JoãoUchiha</strong>
+          <span class="t"> há 8 meses</span>
+        </div>
+        <p class="com1 boxImg">Dragon ball é o pai dos animes, têm que respeitar.❤️‍🔥</p>
+        <img
+          class="coments"
+          src="imgs/filme e serie modelo/comentarios-.png"
+          alt="coments"
+        />
+        <div class="gojo">
+          <p class="ex boxImg"><strong>EXIBIR 26 RESPOSTAS▾</strong></p>
+          <div class="boxImg">
+            <img
+              class="icon1"
+              src="imgs/filme e serie modelo/gojo iconn.png"
+              alt=""
+            /><strong class="c">SatoroGozo</strong>
+            <span class="t"> há 8 meses</span>
+          </div>
+          <p class="com2 boxImg">
+            Curto esse filme, a história é meio bobinha até pro padrão do super,
+            mas ao menos tem umas lutas legais. <br />
+            Na época que anunciaram que seria em 3d eu fiquei com pé atrás, é
+            uma escolha questionável <br />pra um filme,no fim o 3d desse filme
+            é ótimo, não me importaria em ver mais dragon ball nesse estilo.
+          </p>
+          <img
+            class="coments1"
+            src="imgs/filme e serie modelo/comentarios-.png"
+            alt="coments"
+          />
+          <p class="ex1 boxImg"><strong>EXIBIR 10 RESPOSTAS▾</strong></p>
+        </div>
       </div>
     </div>
-  </div>
 
-
-
-  <div class="degrade">
-    <div class="centra">
-      <!-- roda pé -->
-      <footer class="foot">
-        <div class="box1">
-          <p class="contrast">Navegação</p>
-          <p>Séries Populares</p>
-          <p>Séries em Simulcast</p>
-          <p>Calendário de Lançamentos</p>
-          <p>Notícias</p>
-          <p>Jogos</p>
+    <div class="degrade">
+      <div class="centra">
+        <!-- roda pé -->
+        <footer class="foot">
+          <div class="box1">
+            <p class="contrast">Navegação</p>
+            <p>Séries Populares</p>
+            <p>Séries em Simulcast</p>
+            <p>Calendário de Lançamentos</p>
+            <p>Notícias</p>
+            <p>Jogos</p>
+          </div>
+          <div class="box2">
+            <p class="contrast">Contate-nos</p>
+            <p>YouTube</p>
+            <p>Facebook</p>
+            <p>Twitter</p>
+            <p>Instagram</p>
+            <p>TikTok</p>
+          </div>
+          <div class="box3">
+            <p class="contrast">Crunchyroll</p>
+            <p>Sobre</p>
+            <p>Ajuda/FAQ</p>
+            <p>Termos de Uso</p>
+            <p>Política de Privacidade</p>
+            <p>Ferramenta de Consentimento de Cookies</p>
+            <p>Solicitações de Imprensa</p>
+            <p>Baixe o App</p>
+            <p>Resgatar Código</p>
+            <p>Vagas</p>
+          </div>
+          <div class="box4">
+            <p class="contrast">Conta</p>
+            <p>Fila</p>
+            <p>Crunchylistas</p>
+            <p>Histórico</p>
+            <p>Minha Conta</p>
+            <p>Sair</p>
+          </div>
+        </footer>
+        <!-- "pós roda pe" -->
+        <hr class="linha" />
+        <div class="final_box">
+          <img class="logo_sony" src="imgs/sony_pictures_logo.png" alt="" />
+          <span class="tiny"> | </span>
+          <p class="ajuste">© Crunchyroll, LLC</p>
         </div>
-        <div class="box2">
-          <p class="contrast">Contate-nos</p>
-          <p>YouTube</p>
-          <p>Facebook</p>
-          <p>Twitter</p>
-          <p>Instagram</p>
-          <p>TikTok</p>
-        </div>
-        <div class="box3">
-          <p class="contrast">Crunchyroll</p>
-          <p>Sobre</p>
-          <p>Ajuda/FAQ</p>
-          <p>Termos de Uso</p>
-          <p>Política de Privacidade</p>
-          <p>Ferramenta de Consentimento de Cookies</p>
-          <p>Solicitações de Imprensa</p>
-          <p>Baixe o App</p>
-          <p>Resgatar Código</p>
-          <p>Vagas</p>
-        </div>
-        <div class="box4">
-          <p class="contrast">Conta</p>
-          <p>Fila</p>
-          <p>Crunchylistas</p>
-          <p>Histórico</p>
-          <p>Minha Conta</p>
-          <p>Sair</p>
-        </div>
-      </footer>
-      <!-- "pós roda pe" -->
-      <hr class="linha">
-      <div class="final_box">
-        <img class="logo_sony" src="imgs/sony_pictures_logo.png" alt="">
-        <span class="tiny"> | </span>
-        <p class="ajuste">© Crunchyroll, LLC</p>
       </div>
     </div>
-  </div>
-</body>
-
+  </body>
 </html>
