--- a/crunch/home.html
+++ b/crunch/home.html
@@ -17,12 +17,13 @@
       <a class="home" href="home.html"><img class="Crun" src="imgs/Crunchyroll.svg.png" alt="Crunchyroll"></a>
       <a class="tdsS" href="todasasseries.html">Animes</a>
       <a class="tdsF" href="todosFilmes.html">Filmes</a>
-      <div class="iconzinhos">
-        <img src="imgs/" alt="">
-      </div>
-      <div class="user">
-        <img class="iconuser" src="imgs/filme e serie modelo/nobara iconn.png" alt="user">
-        <span class="setinha">▾</span>
+      <div class="iconzinhos user">
+        <div class="caixinha">
+          <img class="lupa" src="imgs/filme e serie modelo/lupa branca.png" alt="lupa">
+          <img class="salvaB" src="imgs/filme e serie modelo/salvar branco.png" alt="salvo">
+          <img class="iconuser" src="imgs/filme e serie modelo/nobara iconn.png" alt="user">
+          <span class="setinha">▾</span>
+        </div>
       </div>
     </div>
   </nav>
@@ -30,12 +31,13 @@
 
 <body>
   <div class="Animeprin">
-    <img class="banner" src="imgs/jujutsu-kaisen-banner.jpg" alt="banner_jujustu">
+    <img class="banner" src="imgs/filme e serie modelo/jujutsu-kaisen (1).jpg" alt="banner_jujustu">
     <a href="/"><img class="jujutsu" src="imgs/Jujutsu_Kaisen_logo.png" alt="jujutsu"></a>
     <img class="idade" src="imgs/nr16-auto.png" alt="Indicado para maiores de 16 anos">
     <p class="ling">◆ Dub | Leg</p>
-    <p class="sinopse">Yuji Itadori come um dedo amaldiçoado para salvar um colega de turma e agora Ryomen Sukuna,<br> um terrível e poderoso feiticeiro conhecido como o Rei das Maldições, habita na alma de Itadori. <br> As maldições são terrores sobrenaturais criados a partir das emoções humanas negativas.</p>
+    <p class="sinopse">Yuji Itadori come um dedo amaldiçoado para salvar um colega de turma<br> e agora Ryomen Sukuna, um terrível e poderoso feiticeiro conhecido como <br> o Rei das Maldições, habita na alma de Itadori. As maldições são terrores <br> sobrenaturais criados a partir das emoções humanas negativas.</p>
     <a class="ver" href="/crunch/seriesmodelo.html"> <strong><span class="seta">▷</span> <span class="com">COMEÇAR A ASSISTIR S1 E1</span></strong></a>
+    <img class="salvarr" src="imgs/filme e serie modelo/salvar laranja.png" alt="salvarL">
   </div>
 
   <!-- conteudo principal -->
@@ -64,26 +66,62 @@
   </section>
 
   <section class="film_recent">
-    <h2>Filmes Recentes</h2>
+    <h2>Filmes Adicionados Recentemente</h2>
     <div class="filrec_content">
-      <p>Exemplo 1</p>
-      <p>Exemplo 2</p>
-      <p>Exemplo 3</p>
-      <p>Exemplo 4</p>
-      <p>Exemplo 5</p>
-      <p>Exemplo 6</p>
+      <div>
+        <a href="filmeModelo.html"><img class="film" src="imgs/filmes/Full metal the movie.jpg" alt=""></a>
+        <p>Exemplo 1</p>
+      </div>
+      <div>
+        <a href="filmeModelo.html"><img class="film" src="imgs/filmes/DBS_1.jpg" alt=""></a>
+        <p>Exemplo 1</p>
+      </div>
+      <div>
+        <a href="filmeModelo.html"><img class="film" src="imgs/filmes/Goblin slayer.jpg" alt=""></a>
+        <p>Exemplo 1</p>
+      </div>
+      <div>
+        <a href="filmeModelo.html"><img class="film" src="imgs/filmes/Haikyu-the-movie.jpg" alt=""></a>
+        <p>Exemplo 1</p>
+      </div>
+      <div>
+        <a href="filmeModelo.html"><img class="film" src="imgs/filmes/Given-the-movie.jpg" alt=""></a>
+        <p>Exemplo 1</p>
+      </div>
+      <div>
+        <a href="filmeModelo.html"><img class="film" src="imgs/filmes/The stranger by the shore.jpe" alt=""></a>
+        <p>Exemplo 1</p>
+      </div>
     </div>
   </section>
 
   <section class="serie_recent">
-    <h2>Séries Recentes</h2>
+    <h2>Animes Que Acabaram de Chegar</h2>
     <div class="serec_content">
-      <p>Exemplo 1</p>
-      <p>Exemplo 2</p>
-      <p>Exemplo 3</p>
-      <p>Exemplo 4</p>
-      <p>Exemplo 5</p>
-      <p>Exemplo 6</p>
+      <div>
+        <a href="seriesmodelo.html""><img class=" film" src="imgs/series/hunter hunter.jpe" alt=""></a>
+        <p>Exemplo 1</p>
+      </div>
+      <div>
+        <a href="seriesmodelo.html""><img class=" film" src="imgs/series/chainsaw man.jpe" alt=""></a>
+        <p>Exemplo 1</p>
+      </div>
+      <div>
+        <a href="seriesmodelo.html""><img class=" film" src="imgs/my-hero.jpg" alt=""></a>
+        <p>Exemplo 1</p>
+      </div>
+      <div>
+        <a href="seriesmodelo.html""><img class=" film" src="imgs/series/One piece.jpe" alt=""></a>
+        <p>Exemplo 1</p>
+      </div>
+      <div>
+        <a href="seriesmodelo.html""><img class=" film" src="imgs/series/Spy Family.jpe" alt=""></a>
+        <p>Exemplo 1</p>
+      </div>
+      <div>
+        <a href="seriesmodelo.html""><img class=" film" src="imgs/series/Shingeki.jpe" alt=""></a>
+        <p>Exemplo 1</p>
+      </div>
     </div>
   </section>
 
