--- a/crunch/seriesmodelo.html
+++ b/crunch/seriesmodelo.html
@@ -2,13 +2,13 @@
 <html lang="pt-br">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="css/serieModelo.css">
-  <link rel="stylesheet" href="css/padrao.css">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="css/serieModelo.css" />
+  <link rel="stylesheet" href="css/padrao.css" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet" />
   <title>Série Modelo</title>
 </head>
 <header>
@@ -17,69 +17,112 @@
       <a class="home" href="home.html"><img class="Crun" src="imgs/Crunchyroll.svg.png" alt="Crunchyroll"></a>
       <a class="tdsS" href="todasasseries.html">Animes</a>
       <a class="tdsF" href="todosFilmes.html">Filmes</a>
-      <div class="iconzinhos">
-        <img src="imgs/" alt="">
-      </div>
-      <div class="user">
-        <img class="iconuser" src="imgs/filme e serie modelo/nobara iconn.png" alt="user">
-        <span class="setinha">▾</span>
+      <div class="iconzinhos user">
+        <div class="caixinha">
+          <img class="lupa" src="imgs/filme e serie modelo/lupa branca.png" alt="lupa">
+          <img class="salvaB" src="imgs/filme e serie modelo/salvar branco.png" alt="salvo">
+          <img class="iconuser" src="imgs/filme e serie modelo/nobara iconn.png" alt="user">
+          <span class="setinha">▾</span>
+        </div>
       </div>
     </div>
   </nav>
 </header>
 
 <body>
+  <img class="conteudo" src="imgs/filmes/jujutsu_play.jpg" alt="player">
+  <img class="play" src="imgs/filme e serie modelo/player.png" alt="player2">
   <div class="geral">
     <section class="modelo">
-      <img class="modeloLeft" src="imgs/filme e serie modelo/proximo ep.PNG" alt="próximo ep">
+      <img class="modeloLeft" src="imgs/filme e serie modelo/proximo ep.PNG" alt="próximo ep" />
       <div class="modeloRight">
-        <img class="salvar" src="imgs/salvar branco.png" alt="salvar">
-        <h2 class="tituloo">JUJUTSU KAISEN <span class="barra">|</span> <span class="num">4.9 ★ (350.9K)▾</span></h2>
+        <img class="salvar" src="imgs/salvar branco.png" alt="salvar" />
+        <h2 class="tituloo">
+          JUJUTSU KAISEN <span class="barra">|</span>
+          <span class="num">4.9 ★ (350.9K)▾</span>
+        </h2>
         <h1 id="titulo">E1 - Ryomen Sukuna</h1>
-        <p><img class="idade" src="imgs/nr16-auto.png" alt="Indicado para maiores de 16 anos"><span class="p">◆</span> <span class="ling">Dub | Leg</span></p>
-        <p class="lançou">Lançado em 2 out 2020 </p>
-        <p><img class="like" src="imgs/filme e serie modelo/likee branco.png" alt="like"> <span class="li">66.6K</span> <img class="dislike" src="imgs/filme e serie modelo/dislike branco.png" alt=""> <span class="li1">552</span> <img class="comp" src="imgs/filme e serie modelo/compartilhar branco.png" alt="compartilhar"></p>
-        <p class="sino">No leito de morte de seu avô, Yuuji Itadori promete que ajudará as pessoas sempre que puder. E a oportunidade vem na forma de acontecimentos sinistro ameaçando seus amigos da escola.</p>
+        <p>
+          <img class="idade" src="imgs/nr16-auto.png" alt="Indicado para maiores de 16 anos" /><span class="p">◆</span> <span class="ling">Dub | Leg</span>
+        </p>
+        <p class="lançou">Lançado em 2 out 2020</p>
+        <p>
+          <img class="like" src="imgs/filme e serie modelo/likee branco.png" alt="like" />
+          <span class="li">66.6K</span>
+          <img class="dislike" src="imgs/filme e serie modelo/dislike branco.png" alt="" />
+          <span class="li1">552</span>
+          <img class="comp" src="imgs/filme e serie modelo/compartilhar branco.png" alt="compartilhar" />
+        </p>
+        <p class="sino">
+          No leito de morte de seu avô, Yuuji Itadori promete que ajudará as
+          pessoas sempre que puder. E a oportunidade vem na forma de
+          acontecimentos sinistro ameaçando seus amigos da escola.
+        </p>
         <h2 class="prox"><strong>PRÓXIMO EPISÓDIO</strong></h2>
-        <input type="checkbox" id="item-1">
+        <p class="lingua boxImg">Dub|Leg</p>
+        <img class="vmais" src="imgs/filmes/ver_mais_eps.png" alt="ver mais">
+        <p class="ep2 boxImg">E2 - Por mim mesmo</p>
+        <input type="checkbox" id="item-1" />
         <div class="checkbox">
           <label for="item-1"><strong class="mos">Mostrar Mais</strong></label>
-          <p><strong>Áudio</strong>
-            <span class="audio">Japonês, Português (Brasil), English,<br><span class="eu">Deutsch, Español (América Latina),</span><br><span class="eu">Español (España), Français, Italiano</span></span>
+          <p class="pp">
+            <strong>Áudio</strong>
+            <span class="audio">Japonês, Português (Brasil), English,<br /><span class="eu">Deutsch, Español (América Latina),</span><br /><span class="eu">Español (España), Français, Italiano</span></span>
           </p>
-          <hr>
-          <p><strong>Legendas</strong> <span class="pt">
-            Português (Brasil), English, Deutsch, <br> <span class="euu">Español (América Latina),Français,</span> <br><span class="euu">Español (España), Italiano, Русский,<br> العربية</span></span></p>
-          <hr>
-          <p><strong>Classificação de Conteúdo</strong><span class="id">A16</span> <span class="idd">
-            Violência, Nudez, Drogas Lícitas, Linguagem Imprópria</span></p>
-            
+          <hr />
+          <p class="pp">
+            <strong>Legendas</strong>
+            <span class="pt">
+              Português (Brasil), English, Deutsch, <br />
+              <span class="euu">Español (América Latina),Français,</span>
+              <br /><span class="euu">Español (España), Italiano, Русский,<br />
+                العربية</span></span>
+          </p>
+          <hr />
+          <p class="pp">
+            <strong>Classificação de Conteúdo</strong><span class="id">A16</span>
+            <span class="idd">
+              Violência, Nudez, Drogas Lícitas, Linguagem Imprópria</span>
+          </p>
         </div>
       </div>
     </section>
 
-    <div class="mdcom">
-      <section class="comentarios">
-        <img class="icoon" src="imgs/filme e serie modelo/nobara iconn.png" alt="icon">
-        <p class="pi"><strong class="i">1.559 Comentários</strong><img class="mais" src="imgs/Mais opcções.png" alt="mais opçoes"> <span class="m"><strong>Mais Populares</strong></span></p>
-        <p class="subTitulo"> Comentar como <img class="coroa" src="imgs/filme e serie modelo/coroaa.png" alt="coroa"><span class="coment">ArthurUzumaki</span></p>
+    <div class="mdcom boxImg">
+      <section class="comentarios boxImg">
+        <img class="icoon" src="imgs/filme e serie modelo/nobara iconn.png" alt="icon" />
+        <p class="pi">
+          <strong class="i">1.559 Comentários</strong><img class="mais" src="imgs/Mais opcções.png" alt="mais opçoes" />
+          <span class="m"><strong>Mais Populares</strong></span>
+        </p>
+        <p class="subTitulo boxImg">
+          Comentar como
+          <img class="coroa" src="imgs/filme e serie modelo/coroaa.png" alt="coroa" /><span class="coment">ArthurUzumaki</span>
+        </p>
         <textarea class="txtArea lato-regular" cols="80" rows="2" placeholder="Deixar um Comentário "></textarea>
-        <img class="comentar" src="imgs/filme e serie modelo/comentar.png" alt="comentar">
+        <img class="comentar" src="imgs/filme e serie modelo/comentar.png" alt="comentar" />
       </section>
-      <p><img class="icon1" src="imgs/filme e serie modelo/pochita.png" alt=""><strong class="c">JoãoUchiha</strong> <span class="t"> há 3 anos</span></p>
-      <p class="com1">Então é tipo Bleach só que bom?</p>
-      <img class="coments" src="imgs/filme e serie modelo/comeeentario.png" alt="coments">
+      <div class="boxImg">
+        <img class="icon1" src="imgs/filme e serie modelo/pochita.png" alt="" /><strong class="c">JoãoUchiha</strong>
+        <span class="t"> há 3 anos</span>
+      </div>
+      <p class="com1 boxImg">Então é tipo Bleach só que bom?</p>
+      <img class="coments" src="imgs/filme e serie modelo/comeeentario.png" alt="coments" />
       <div class="gojo">
-        <p class="ex"><strong>EXIBIR 26 RESPOSTAS▾</strong></p>
-        <p><img class="icon1" src="imgs/filme e serie modelo/gojo iconn.png" alt=""><strong class="c">SatoroGozo</strong> <span class="t"> há 8 meses</span></p>
-        <p class="com2">Não sei se estou existindo ou apenas vivendo pelos episódios de Jujutsu.</p>
-        <img class="coments1" src="imgs/filme e serie modelo/comentarios-.png" alt="coments">
-        <p class="ex1"><strong>EXIBIR 10 RESPOSTAS▾</strong></p>
+        <p class="ex boxImg"><strong>EXIBIR 26 RESPOSTAS▾</strong></p>
+        <div class="boxImg">
+          <img class="icon1" src="imgs/filme e serie modelo/gojo iconn.png" alt="" /><strong class="c">SatoroGozo</strong>
+          <span class="t"> há 8 meses</span>
+        </div>
+        <p class="com2 boxImg">
+          Não sei se estou existindo ou apenas vivendo pelos episódios de
+          Jujutsu.
+        </p>
+        <img class="coments1" src="imgs/filme e serie modelo/comentarios-.png" alt="coments" />
+        <p class="ex1 boxImg"><strong>EXIBIR 10 RESPOSTAS▾</strong></p>
       </div>
     </div>
   </div>
-
-
 
   <div class="degrade">
     <div class="centra">
@@ -123,9 +166,9 @@
         </div>
       </footer>
       <!-- "pós roda pe" -->
-      <hr class="linha">
+      <hr class="linha" />
       <div class="final_box">
-        <img class="logo_sony" src="imgs/sony_pictures_logo.png" alt="">
+        <img class="logo_sony" src="imgs/sony_pictures_logo.png" alt="" />
         <span class="tiny"> | </span>
         <p class="ajuste">© Crunchyroll, LLC</p>
       </div>
