--- a/crunch/todasasseries.html
+++ b/crunch/todasasseries.html
@@ -17,12 +17,13 @@
       <a class="home" href="home.html"><img class="Crun" src="imgs/Crunchyroll.svg.png" alt="Crunchyroll"></a>
       <a class="tdsS" href="todasasseries.html">Animes</a>
       <a class="tdsF" href="todosFilmes.html">Filmes</a>
-      <div class="iconzinhos">
-        <img src="imgs/" alt="">
-      </div>
-      <div class="user">
-        <img class="iconuser" src="imgs/filme e serie modelo/nobara iconn.png" alt="user">
-        <span class="setinha">▾</span>
+      <div class="iconzinhos user">
+        <div class="caixinha">
+          <img class="lupa" src="imgs/filme e serie modelo/lupa branca.png" alt="lupa">
+          <img class="salvaB" src="imgs/filme e serie modelo/salvar branco.png" alt="salvo">
+          <img class="iconuser" src="imgs/filme e serie modelo/nobara iconn.png" alt="user">
+          <span class="setinha">▾</span>
+        </div>
       </div>
     </div>
   </nav>
@@ -122,8 +123,8 @@
     </div>
 
     <div>
-      <a href="seriesmodelo.html"><img class="film" src="imgs/series/Demon Slayer.jpe" alt=""></a>
-      <p>Demon Slayer: Kimetsu no Yaiba</p>
+      <a class="demon" href="seriesmodelo.html"><img class="film" src="imgs/series/Demon Slayer.jpe" alt=""></a>
+      <p>Demon Slayer: <br> Kimetsu no Yaiba</p>
       <p class="leg">Dub | Leg</p>
 
     </div>
