--- a/crunch/todosFilmes.html
+++ b/crunch/todosFilmes.html
@@ -17,12 +17,13 @@
       <a class="home" href="home.html"><img class="Crun" src="imgs/Crunchyroll.svg.png" alt="Crunchyroll"></a>
       <a class="tdsS" href="todasasseries.html">Animes</a>
       <a class="tdsF" href="todosFilmes.html">Filmes</a>
-      <div class="iconzinhos">
-        <img src="imgs/" alt="">
-      </div>
-      <div class="user">
-        <img class="iconuser" src="imgs/filme e serie modelo/nobara iconn.png" alt="user">
-        <span class="setinha">▾</span>
+      <div class="iconzinhos user">
+        <div class="caixinha">
+          <img class="lupa" src="imgs/filme e serie modelo/lupa branca.png" alt="lupa">
+          <img class="salvaB" src="imgs/filme e serie modelo/salvar branco.png" alt="salvo">
+          <img class="iconuser" src="imgs/filme e serie modelo/nobara iconn.png" alt="user">
+          <span class="setinha">▾</span>
+        </div>
       </div>
     </div>
   </nav>
@@ -111,14 +112,14 @@
 
     <div>
       <a href="/crunch/filmeModelo.html"><img class="film" src="imgs/filmes/Goblin slayer.jpg" alt="Goblin slayer"></a>
-      <p>GOBLIN SLAYER Goblin's Crown</p>
+      <p>GOBLIN SLAYER <br>Goblin's Crown</p>
       <p class="leg">Legendado</p>
 
     </div>
 
     <div>
       <a href="/crunch/filmeModelo.html"><img class="film" src="imgs/filmes/Haikyu-the-movie.jpg" alt="Haikyu-the-movie"></a>
-      <p>HAIKYU!! A Batalha de Conceitos</p>
+      <p>HAIKYU!! <br>A Batalha de Conceitos</p>
       <p class="leg">Legendado</p>
 
     </div>
