Seja oque Deus quiser

--- a/crunch/home.html
+++ b/crunch/home.html
@@ -44,19 +44,19 @@
     <div class="top3_content">
       <div class="box">
         <span class="number">1</span>
-        <img class="top1" src="imgs/series/Dragon Ball.jpe" alt="Dragin_Ball">
+        <a class="a-img" href="seriesmodelo.html"><img class="top1" src="imgs/series/Dragon Ball.jpe" alt="Dragin_Ball"></a>
       </div>
       <p class="desca">Exemplo 1</p>
 
       <div class="box">
         <span class="number">2</span>
-        <img class="top1" src="imgs/series/Jujutsu.jpe" alt="Dragin_Ball">
+        <a class="a-img" href="seriesmodelo.html"><img class="top1" src="imgs/filmes/Demon slayer mugen train.jpg" alt="Dragin_Ball"></a>
       </div>
       <p class="desca1">Exemplo 2</p>
 
       <div class="box">
         <span class="number">3</span>
-        <img class="top1" src="imgs/series/Spy Family.jpe" alt="Dragin_Ball">
+        <a class="a-img" href="seriesmodelo.html"><img class="top1" src="imgs/series/Spy Family.jpe" alt="Dragin_Ball"></a>
       </div>
       <p class="desca2">Exemplo 3</p>
 
