comitei dnv :dog:

--- a/crunch/home.html
+++ b/crunch/home.html
@@ -48,25 +48,34 @@
         <span class="number">1</span>
         <a class="a-img" href="seriesmodelo.html"><img class="top1" src="imgs/series/Dragon Ball.jpe" alt="Dragin_Ball"></a>
       </div>
-      <p class="desca">Exemplo 1</p>
+      <div class="desca">
+        <p class="desca">Dragon Ball Super</p>
+        <p class="desca"><span class="legen">Dub|Leg</span></p>
+      </div>
 
       <div class="box">
         <span class="number">2</span>
-        <a class="a-img" href="seriesmodelo.html"><img class="top1" src="imgs/filmes/Demon slayer mugen train.jpg" alt="Dragin_Ball"></a>
+        <a class="a-img" href="filmeModelo.html"><img class="top1" src="imgs/filmes/Demon slayer mugen train.jpg" alt="Dragin_Ball"></a>
       </div>
-      <p class="desca1">Exemplo 2</p>
+      <div class="desca1">
+      <p class="desca1">Demon Slayer: <br>Kimetsu no Yaiba Mugen Train</p>
+      <p class="desca1"><span class="legen">Dub|Leg</span></p>
+    </div>
 
       <div class="box">
         <span class="number">3</span>
         <a class="a-img" href="seriesmodelo.html"><img class="top1" src="imgs/series/Spy Family.jpe" alt="Dragin_Ball"></a>
       </div>
-      <p class="desca2">Exemplo 3</p>
+      <div class="desca2">
+      <p class="desca2">SPY x FAMILY</p>
+      <p class="desca2"><span class="legen">Dub|Leg</span></p>
+    </div>
 
     </div>
   </section>
 
   <section class="film_recent">
-    <h2>Filmes Adicionados Recentemente</h2>
+    <h2 class="tito">Filmes Adicionados Recentemente</h2>
     <div class="filrec_content">
       <div>
         <a href="filmeModelo.html"><img class="film" src="imgs/filmes/Full metal the movie.jpg" alt=""></a>
@@ -96,7 +105,7 @@
   </section>
 
   <section class="serie_recent">
-    <h2>Animes Que Acabaram de Chegar</h2>
+    <h2 class="tito">Animes Que Acabaram de Chegar</h2>
     <div class="serec_content">
       <div>
         <a href="seriesmodelo.html""><img class=" film" src="imgs/series/hunter hunter.jpe" alt=""></a>
