--- a/crunch/filmeModelo.html
+++ b/crunch/filmeModelo.html
@@ -7,10 +7,9 @@
     <link rel="stylesheet" href="css/padrao.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Lato&display=swap"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap"rel="stylesheet" />
+    <link rel="shortcut icon" href="imgs/filmes/icoon.ico" type="image/x-icon">
+
     <title>Filme Modelo</title>
   </head>
   <header>
