--- a/crunch/todosFilmes.html
+++ b/crunch/todosFilmes.html
@@ -9,6 +9,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
+  <link rel="shortcut icon" href="imgs/filmes/icoon.ico" type="image/x-icon">
   <title>Todos os Filmes</title>
 </head>
 <header>
